# OScapeDLCapture

./: .gitignore  CMakeLists.txt  DEBUG.md  LICENSE  README.md  SERVER_SIMULATION.md  SERVER_SIMULATION_RESULTS.md  SSL.md  TESTING.md  TEST_WITHOUT_CERTIFICATE.md
certs/: test_cert.crt  test_cert.key  test_cert.pfx
config/: config.ini
scripts/: build.ps1  build.sh  generate_cert.ps1  simulate_server.ps1
src/: custom.cpp  custom_static.cpp  server.cpp
tools/: CMakeLists.txt  test_client.cpp  test_static_dll.cpp
tools/contact_center_simulator/: go.mod  main.go
tools/go-server/: go.mod  main.go
